[package]
name = "excel"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "0.2.21", features = ["macros", "rt-threaded", "blocking", "time"] }
thiserror = "1.0.20"
chrono = { version = "0.4.13", features = ["serde"] }
rust_xlsxwriter = "0.88.0"
uuid = { version = "0.8", features = ["v4"] }
lazy_static = "=1.4.0"

